Fix alignment of select2 "allowClear"-icon.

--- a/select2-bootstrap.css
+++ b/select2-bootstrap.css
@@ -126,6 +126,10 @@
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff428bca', endColorstr='#ff357ebd', GradientType=0);
 }
 
+.select2-container .select2-choice abbr {
+  top: 9px;
+}
+
 [class^="input-"] .select2-offscreen {
   position: absolute;
 }
